--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.url=jdbc:mysql://localhost:3306/myyusers
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -12,11 +12,12 @@ spring.jpa.hibernate.ddl-auto = update
 ## Hibernate ddl auto (create, create-drop, validate, update)
 #spring.h2.console.enabled=true
 
+#server.port=8081
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=seemaswamy026@gmail.com
-spring.mail.password=@ammu1926
+spring.mail.username=mahanidhi125@gmail.com
+spring.mail.password=B
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
